menu created partially completed