@@ -1,11 +1,18 @@
 package com.menu.qrbhojan.menuCategories.service.impl;
 
+import com.menu.qrbhojan.menu.dto.MenusResponse;
+import com.menu.qrbhojan.menu.entity.Menu;
+import com.menu.qrbhojan.menu.repository.MenuRepository;
 import com.menu.qrbhojan.menuCategories.dto.request.MenuCategoryRequest;
 import com.menu.qrbhojan.menuCategories.dto.request.UpdateMenuCategoryRequest;
 import com.menu.qrbhojan.menuCategories.dto.response.MenuCategoryResponse;
+import com.menu.qrbhojan.menuCategories.dto.response.UserMenuResponse;
 import com.menu.qrbhojan.menuCategories.entity.MenuCategories;
 import com.menu.qrbhojan.menuCategories.repository.MenuCategoryRepository;
 import com.menu.qrbhojan.menuCategories.service.MenuCategoryService;
+import com.menu.qrbhojan.menu_items.dto.MenuItemResponses;
+import com.menu.qrbhojan.menu_items.entity.MenuItem;
+import com.menu.qrbhojan.menu_items.repository.MenuItemRepository;
 import com.menu.qrbhojan.utils.LoggedInUser;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -24,6 +31,8 @@ import java.util.stream.Collectors;
 public class MenuCategoryServiceImpl implements MenuCategoryService {
     private final MenuCategoryRepository menuCategoryRepository;
     private final LoggedInUser loggedInUserUtil;
+    private final MenuRepository menuRepository;
+    private final MenuItemRepository menuItemRepository;
 
     @Override
     public List<MenuCategoryResponse> createMenuCategories(List<MenuCategoryRequest> menuCategoryRequest) {
@@ -46,7 +55,7 @@ public class MenuCategoryServiceImpl implements MenuCategoryService {
     public Page<MenuCategoryResponse> getAllMenuCategories(Pageable pageable) {
             log.info("Getting all menu category");
             Page<MenuCategories> menuCategories = menuCategoryRepository.findAllByCafeSpecialId(loggedInUserUtil.getLoggedInCafe().getCafeSpecialId(), pageable);
-            List<MenuCategoryResponse> menuCategoryResponses = menuCategories.stream().map(MenuCategoryResponse::new).collect(Collectors.toList());
+            List<MenuCategoryResponse> menuCategoryResponses = menuCategories.stream().map(MenuCategoryResponse::new).toList();
             return new PageImpl<>(menuCategoryResponses, pageable, menuCategories.getTotalElements());
     }
 
@@ -76,5 +85,44 @@ public class MenuCategoryServiceImpl implements MenuCategoryService {
         log.info("Menu Category updated successfully with id: {}", updateMenuCategoryRequest.getCategoryId());
 
         return new MenuCategoryResponse(savedMenuCategories);
+    }
+
+    @Override
+    public Page<UserMenuResponse> getAllMenu(String cafeSpecialId, Pageable pageable) {
+        log.info("Getting all menu for cafe special id: {}", cafeSpecialId);
+
+        // Fetch all categories for the given cafeSpecId
+        Page<MenuCategories> menuCategoriesPage = menuCategoryRepository.findAllByCafeSpecialId(cafeSpecialId, pageable);
+        List<MenuCategories> menuCategoriesList = menuCategoriesPage.getContent();
+
+        List<UserMenuResponse> userMenuResponses = new ArrayList<>();
+
+        // Iterate through each category
+        for (MenuCategories category : menuCategoriesList) {
+            // Fetch all menus for the current category
+            List<Menu> menus = menuRepository.findByMenuCategoriesCategoryId(category.getCategoryId());
+            List<MenusResponse> menusResponses = new ArrayList<>();
+
+            // Iterate through each menu
+            for (Menu menu : menus) {
+                // Fetch all menu items for the current menu
+                List<MenuItem> menuItems = menuItemRepository.findMenuItemByMenu_MenuId(menu.getMenuId());
+                List<MenuItemResponses> menuItemResponses = menuItems.stream().map(MenuItemResponses::new).collect(Collectors.toList());
+
+                // Create MenusResponse for the current menu
+                MenusResponse menusResponse = new MenusResponse(menu.getMenuId(), menu.getMenuName(),  menu.getDescription(), menu.getCafeSpecialId(), menuItemResponses);
+                menusResponses.add(menusResponse);
+            }
+
+            // Create UserMenuResponse for the current category
+            UserMenuResponse userMenuResponse = new UserMenuResponse(
+                    new MenuCategoryResponse(category.getCategoryId(), category.getCategoryName(), category.getCategoryDescription(), category.getCafeSpecialId()),
+                    menusResponses
+            );
+
+            userMenuResponses.add(userMenuResponse);
+        }
+
+        return new PageImpl<>(userMenuResponses, pageable, menuCategoriesPage.getTotalElements());
     }
 }
